# inheritance-rs

./: Cargo.toml  README.md
examples/: main.rs
src/: lib.rs
src/proc_macro/: Cargo.toml  macros.rs  mod.rs
