[package]
name = "inheritance"
version = "0.0.1-alpha"
authors = ["Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>"]
edition = "2018"

documentation = "https://docs.rs/inheritance"
homepage = "https://crates.io/crates/inheritance"
repository = "https://github.com/danielhenrymantilla/inheritance-rs"

description = "Avoiding code reuse in Rust with OOP inheritance"

license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.proc_macro]
package = "inheritance-proc-macro"
version = "0.0.1-alpha"
path = "src/proc_macro"

[features]
verbose-expansions = ["proc_macro/verbose-expansions", ]

default = []
